@@ -1,3 +1,41 @@
 # cms
 2018-10-11最新激活地址 : http://139.199.89.239:1008/b8fdf475-b9f7-4146-b426-6e1bb5a17a16
-zip update-site into zip file and install in eclipse.
+
+
+eclipse:
+
+-startup
+plugins/org.eclipse.equinox.launcher_1.3.200.v20160318-1642.jar
+--launcher.library
+plugins/org.eclipse.equinox.launcher.win32.win32.x86_64_1.1.400.v20160518-1444
+-product
+org.eclipse.epp.package.reporting.product
+--launcher.defaultAction
+openFile
+--launcher.appendVmargs
+-vm
+C:/Program Files/Java/jdk1.8.0_172/jre/bin/server/jvm.dll
+-vmargs
+-XX:+UseG1GC
+-XX:MaxGCPauseMillis=100
+-XX:MaxMetaspaceSize=1024m
+-XX:+UseStringDeduplication
+-XX:+DisableExplicitGC
+-XX:-UseGCOverheadLimit
+-XX:-UseCodeCacheFlushing
+-XX:+UseNUMA
+-XX:+UseLargePages
+-Xmx2048m
+-Xss2048m
+-XX:PermSize=1024m
+-XX:MaxPermSize=4056m
+-Xverify:none
+-Dosgi.requiredJavaVersion=1.8
+-Doracle.eclipse.tools.webtier.appxray.debug.disable=true
+-Doomph.update.url=http://download.eclipse.org/oomph/updates/milestone/latest
+-Doomph.redirection.index.redirection=index:/->http://git.eclipse.org/c/oomph/org.eclipse.oomph.git/plain/setups/
+-javaagent:dropins/Pleiades/eclipse/plugins/jp.sourceforge.mergedoc.pleiades/pleiades.jar
+-Dsun.lang.ClassLoader.allowArraySyntax=true
+
+java JVM:
+-Xms256m -Xmx1024m
